option('documentation', description: 'Build the documentation (requires Doxygen)', type: 'feature', value: 'disabled')
option('xwayland', description: 'Enable support for X11 applications', type: 'feature', value: 'disabled')
option('mobile', description: 'Enable mobile wayland compositor, note that this will disable xwayland', type: 'feature', value: 'disabled')
